For files starting with "#!" check whether the buffer contains any nulls before deciding whether they are plain text.  Bug 110767, r=bbaetz, sr=rpotts